--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <style type="text/css">
+      body {
+        text-align: center;
+        font-family: helvetica, arial,;
+      }
+    </style>
+  </head>
 </html>
