--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,10 @@
     <style type="text/css">
       body {
         text-align: center;
-        font-family: helvetica, arial,;
+        font-family: helvetica, arial;
+        font-size: 22px;
+        color: #888;
+        margin: 20px;
       }
     </style>
   </head>
