--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,11 @@
         color: #888;
         margin: 20px;
       }
+      #c {
+        margin: 0 auto;
+        width: 500px;
+        text-align: left;
+      }
     </style>
   </head>
 </html>
