--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,16 @@
   </head>
   <body>
     <h2>Sinatra doesn't know this ditty.</h2>
-    
+    <img src='http://example.org/__sinatra__/404.png'>
+    <div id="c">
+      Try this:
+      <pre># in app.rb
+    class App 
+      get &#x27;&#x27; do 
+      &quot;Hello World&quot;
+      end 
+      end 
+      </pre>
+    </div>
   </body>
 </html>
