--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h2>Sinatra doesn't know this ditty.</h2>
+    <h1>Buster's Best Bowling Alley</h1>
     <img src='http://example.org/__sinatra__/404.png'>
     <div id="c">
       Try this:
